--- a/.env
+++ b/.env
@@ -5,7 +5,8 @@ EMAIL_HOST_USER=anderymazo2@mail.ru
 EMAIL_HOST_PASSWORD=JseSju91aJpdDZuU34eF
 BASE_URL=http://localhost:8000/
 #Emails fo Mail
-
+SECRET_KEY=django-insecure-x5*83-#y)-z)8f%nl*8fegr^+#jq()=*^9+cnjc1@#jlv*)51l
+#'django-insecure-x5*83-#y)-z)8f%nl*8fegr^+#jq()=*^9+cnjc1@#jlv*)51l'
 # EMAIL_HOST_USER=anderymazo2@mail.ru
 # EMAIL_HOST_PASSWORD=JseSju91aJpdDZuU34eF
 
